--- a/_config.yml
+++ b/_config.yml
@@ -19,19 +19,19 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Mike的筆記
-email: trexcobras@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Hello World
+tagline: Hello World
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: 
-github_username: usermark
 timezone: Asia/Taipei
+author: 
+  name: Mike Chen
+paginate: 10
 
 # Build settings
-theme: minima
+remote_theme: zivong/jekyll-theme-hydure
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
