--- a/source/_data/next.yml
+++ b/source/_data/next.yml
@@ -638,12 +638,12 @@ gitalk:
   repo: usermark.github.io # Repository name to store issues
   client_id: fe34fe28201c28ecaca2 # GitHub Application Client ID
   client_secret: 6b0f055d80dc258148f06400ce27502351d56921 # GitHub Application Client Secret
-  admin_user: # GitHub repo owner and collaborators, only these guys can initialize gitHub issues
+  admin_user: usermark # GitHub repo owner and collaborators, only these guys can initialize gitHub issues
   distraction_free_mode: true # Facebook-like distraction free mode
   # Gitalk's display language depends on user's browser or system environment
   # If you want everyone visiting your site to see a uniform language, you can set a force language value
   # Available values: en | es-ES | fr | ru | zh-CN | zh-TW
-  language:
+  language: zh-TW
 
 
 # ---------------------------------------------------------------
