--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Mike的筆記
 subtitle: ''
-description: Hello World
+description: 現居高雄，熟悉 Android 和 Python 開發，有九年以上程式開發經驗，喜歡學習新事物和閱讀。
 keywords:
 author: Mike Chen
 language: zh-TW
