--- a/source/_data/next.yml
+++ b/source/_data/next.yml
@@ -463,7 +463,7 @@ exturl: false
 
 # Google Webmaster tools verification.
 # See: https://www.google.com/webmasters
-google_site_verification:
+google_site_verification: IUJ04DyRucs8xo_BKf0Q-i4i4IC2yI3u8vnYlmlJvX8
 
 # Bing Webmaster tools verification.
 # See: https://www.bing.com/webmaster
